changes after adding getInner function

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -3,6 +3,7 @@ importFrom(Rcpp, sourceCpp)
 exportPattern("^[[:alpha:]]+")
 import(pdist)
 export(itrFit)
+export(getInner)
 export(predict.itrfit)
 export(pred_to_num)
 export(pred_to_chr)
