add new class ITR

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -5,6 +5,7 @@ import(pdist)
 export(itrFit)
 export(getInner)
 export(predict.itrfit)
+export(head.ITR)
 export(pred_to_num)
 export(pred_to_chr)
 export(tune)
